--- a/arch/arm64/configs/yarpiin_defconfig
+++ b/arch/arm64/configs/yarpiin_defconfig
@@ -515,6 +515,7 @@ CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 # CONFIG_CPUFREQ_DT is not set
+CONFIG_MSM_TRACK_FREQ_TARGET_INDEX=y
 CONFIG_CPU_BOOST=y
 
 #
