--- a/arch/arm64/configs/yarpiin_defconfig
+++ b/arch/arm64/configs/yarpiin_defconfig
@@ -4455,3 +4455,4 @@ CONFIG_DYNAMIC_FSYNC=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y 
 CONFIG_QUICK_WAKEUP=y
 CONFIG_POWERSUSPEND=y
+CONFIG_IOSCHED_SWITCHER=y 
