--- a/arch/arm64/configs/yarpiin_defconfig
+++ b/arch/arm64/configs/yarpiin_defconfig
@@ -4457,3 +4457,4 @@ CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_QUICK_WAKEUP=y
 CONFIG_POWERSUSPEND=y
 CONFIG_IOSCHED_SWITCHER=y 
+CONFIG_FORCE_FAST_CHARGE=y 
