yarpiin_defconfig: enable Boeffla Touchkey control and adapt to UKM

--- a/arch/arm64/configs/yarpiin_defconfig
+++ b/arch/arm64/configs/yarpiin_defconfig
@@ -4458,3 +4458,4 @@ CONFIG_QUICK_WAKEUP=y
 CONFIG_POWERSUSPEND=y
 CONFIG_IOSCHED_SWITCHER=y 
 CONFIG_FORCE_FAST_CHARGE=y 
+CONFIG_BOEFFLA_TOUCH_KEY_CONTROL=y
