--- a/arch/arm/boot/dts/qcom/msm8996.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996.dtsi
@@ -2057,8 +2057,8 @@
 		qcom,tune2-efuse-bit-pos = <21>;
 		qcom,tune2-efuse-num-bits = <4>;
 		qcom,enable-dpdm-pulsing;
-		qcom,qusb-phy-init-seq = <0x0 0x80
-					0x03 0x84
+		qcom,qusb-phy-init-seq = <0xF8 0x80
+					0xB3 0x84
 					0x83 0x88
 					0xC0 0x8C
 					0x30 0x08
@@ -2078,7 +2078,6 @@
 
 	qusb_phy1: qusb@7412000 {
 		compatible = "qcom,qusb2phy";
-		status = "disabled";
 		reg = <0x07412000 0x180>,
 			<0x076f8800 0x400>,
 			<0x0007024c 0x4>,
@@ -2233,6 +2232,7 @@
 		vdd-wlan-io-supply = <&pm8994_s4>;
 		vdd-wlan-xtal-supply = <&pm8994_l30>;
 		vdd-wlan-core-supply = <&pm8994_s3>;
+		wlan-ant-switch-supply = <&pm8994_l18_pin_ctrl>;
 		qcom,wlan-en-vreg-support;
 		qcom,enable-bootstrap-gpio;
 		qcom,notify-modem-status;
