--- a/arch/arm64/configs/yarpiin_defconfig
+++ b/arch/arm64/configs/yarpiin_defconfig
@@ -520,6 +520,7 @@ CONFIG_CPU_FREQ_GOV_DARKNESS=y
 CONFIG_CPU_FREQ_GOV_ALUCARD=y
 CONFIG_CPU_FREQ_GOV_RELAXED=y
 CONFIG_CPU_FREQ_GOV_DESPAIR=y
+CONFIG_CPU_FREQ_GOV_ELECTRON=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 # CONFIG_CPUFREQ_DT is not set
 CONFIG_MSM_TRACK_FREQ_TARGET_INDEX=y
