--- a/arch/arm64/configs/yarpiin_defconfig
+++ b/arch/arm64/configs/yarpiin_defconfig
@@ -4461,4 +4461,4 @@ CONFIG_IOSCHED_SWITCHER=y
 CONFIG_FORCE_FAST_CHARGE=y 
 CONFIG_BOEFFLA_TOUCH_KEY_CONTROL=y
 CONFIG_FINGERPRINT_BOOST=y
-CONFIG_AUTOSMP=y
+# CONFIG_AUTOSMP is not set
