--- a/arch/arm/boot/dts/qcom/common/dsi-panel-samsung_s6e3fa3_1080p_cmd.dtsi
+++ b/arch/arm/boot/dts/qcom/common/dsi-panel-samsung_s6e3fa3_1080p_cmd.dtsi
@@ -107,18 +107,24 @@
 	       // qcom,mdss-tear-check-start-pos= <1920>; /* Height */
 	       // qcom,mdss-tear-check-rd-ptr-trigger-intr= <1921>; /* Height + 1 */
 
-		qcom,mdss-dsi-high-brightness-panel;
-		qcom,mdss-dsi-panel-acl-command = [15 01 00 00 00 00 02 55 00];
-		qcom,mdss-dsi-acl-command-state = "dsi_hs_mode";
-		qcom,mdss-dsi-acl-ncmds = <0>;
-		qcom,mdss-dsi-acl-npayload = <1>;
-		qcom,mdss-dsi-panel-srgb-on-command = [
+		cm,mdss-livedisplay-cabc-cmd = [
+			15 01 00 00 00 00 02 55 00];
+		cm,mdss-livedisplay-cabc-ui-value = <0x03>;
+		cm,mdss-livedisplay-hbm-on-cmd = [
+			15 01 00 00 00 00 02 53 E0];
+		cm,mdss-livedisplay-hbm-off-cmd = [
+			15 01 00 00 00 00 02 53 20];
+		cm,mdss-livedisplay-srgb-on-cmd = [
+			39 01 00 00 00 00 02 57 4C];
+		cm,mdss-livedisplay-srgb-off-cmd = [
+			39 01 00 00 00 00 02 57 40];
+		cm,mdss-livedisplay-dci-p3-on-cmd = [
 			39 01 00 00 00 00 03 F0 5A 5A
 			39 01 00 00 00 00 02 57 A4
 			39 01 00 00 00 00 02 B0 32
-			39 01 00 00 00 00 16 ED B8 03 04 45 E2 10 04 07 C1 4B EB D7 B8 0A BF FF ED 14 FF F6 D7
-			39 01 00 00 00 00 03 F0 A5 A5];
-		qcom,mdss-dsi-panel-srgb-off-command = [
+			39 01 00 00 00 00 16 ED D8 00 00 16 D2 00 08 08 C3 1C F1 CF E8 02 C8 E9 DF 00 FF F6 Da
+			39 01 00 00 00 00 03 f0 A5 A5];
+		cm,mdss-livedisplay-dci-p3-off-cmd = [
 			39 01 00 00 00 00 03 F0 5A 5A
 			39 01 00 00 00 00 02 57 40
 			39 01 00 00 00 00 03 F0 A5 A5];
