--- a/arch/arm/boot/dts/qcom/common/dsi-panel-samsung_s6e3fa5_1080p_cmd.dtsi
+++ b/arch/arm/boot/dts/qcom/common/dsi-panel-samsung_s6e3fa5_1080p_cmd.dtsi
@@ -103,14 +103,39 @@
 	       // qcom,mdss-tear-check-start-pos= <1920>; /* Height */
 	       // qcom,mdss-tear-check-rd-ptr-trigger-intr= <1921>; /* Height + 1 */
 
-		qcom,mdss-dsi-high-brightness-panel;
-		qcom,mdss-dsi-panel-acl-command = [15 01 00 00 00 00 02 55 00];
-		qcom,mdss-dsi-acl-command-state = "dsi_hs_mode";
-		qcom,mdss-dsi-acl-ncmds = <0>;
-		qcom,mdss-dsi-acl-npayload = <1>;
-		qcom,mdss-dsi-panel-hbm-on-command = [15 01 00 00 00 00 02 53 E8];
-		qcom,mdss-dsi-panel-hbm-off-command = [15 01 00 00 00 00 02 53 28];
-		qcom,mdss-dsi-hbm-command-state = "dsi_hs_mode";
+		cm,mdss-livedisplay-cabc-cmd = [
+			15 01 00 00 00 00 02 55 00];
+		cm,mdss-livedisplay-cabc-ui-value = <0x03>;
+		cm,mdss-livedisplay-hbm-on-cmd = [
+			15 01 00 00 00 00 02 53 E0];
+		cm,mdss-livedisplay-hbm-off-cmd = [
+			15 01 00 00 00 00 02 53 20];
+		cm,mdss-livedisplay-srgb-on-cmd = [
+			39 01 00 00 00 00 03 F0 5A 5A
+			39 01 00 00 00 00 02 C3 81
+			39 01 00 00 00 00 02 B0 19
+			39 01 00 00 00 00 16 C3 C9 00 04 49 EF 16 04 07 CF 44 DB D9 A1 06 C0 F2 EA 1B FA F6 E0
+			39 01 00 00 00 00 02 B0 18
+			39 01 00 00 00 00 02 C3 01
+			39 01 00 00 00 00 03 F0 A5 A5];
+		cm,mdss-livedisplay-srgb-off-cmd = [
+			39 01 00 00 00 00 03 F0 5A 5A
+			39 01 00 00 00 00 02 C3 01
+			39 01 00 00 00 00 02 B0 18
+			39 01 00 00 00 00 02 C3 00
+			39 01 00 00 00 00 03 F0 A5 A5];
+		cm,mdss-livedisplay-dci-p3-on-cmd = [
+			39 01 00 00 00 00 03 F0 5A 5A
+			39 01 00 00 00 00 02 C3 81
+			39 01 00 00 00 00 02 B0 18
+			39 01 00 00 00 00 02 C3 01
+			39 01 00 00 00 00 03 F0 A5 A5];
+		cm,mdss-livedisplay-dci-p3-off-cmd = [
+			39 01 00 00 00 00 03 F0 5A 5A
+			39 01 00 00 00 00 02 C3 01
+			39 01 00 00 00 00 02 B0 18
+			39 01 00 00 00 00 02 C3 00
+			39 01 00 00 00 00 03 F0 A5 A5];
 		/******************************************************************************/
 // if you need read the lcd register value you can modify the qcom,mdss-dsi-id-command 
 		qcom,mdss-dsi-read-reg-enable-command  = [39 01 00 00 00 00 03 F0 5A 5A];
@@ -125,60 +150,6 @@
 		qcom,mdss-dsi-id-command-state = "dsi_lp_mode";
 
 /*****************************************************************************/
-			qcom,mdss-dsi-panel-srgb-on-command = [
-				39 01 00 00 00 00 03 f0 5a 5a
-				39 01 00 00 00 00 02 C3 81
-				39 01 00 00 00 00 02 B0 19
-				39 01 00 00 00 00 16 C3 C9 00 04 49 EF 16 04 07 CF 44 DB D9 A1 06 C0 F2 EA 1B FF F6 D7
-				39 01 00 00 00 00 02 B0 18
-				39 01 00 00 00 00 02 C3 01
-				39 01 00 00 00 00 03 f0 A5 A5
-				];
-			qcom,mdss-dsi-panel-srgb-off-command = [
-				39 01 00 00 00 00 03 F0 5A 5A
-				39 01 00 00 00 00 02 C3 01
-				39 01 00 00 00 00 02 B0 18
-				39 01 00 00 00 00 02 C3 00
-				39 01 00 00 00 00 03 F0 A5 A5
-				];
-			qcom,mdss-dsi-srgb-command-state = "dsi_hs_mode";
-	/*****************************************************************************/ 
-			qcom,mdss-dsi-panel-Adobe-rgb-on-command = [
-				39 01 00 00 00 00 03 F0 5A 5A
-				39 01 00 00 00 00 02 C3 81
-				39 01 00 00 00 00 02 B0 18
-				39 01 00 00 00 00 02 C3 11
-				39 01 00 00 00 00 03 F0 A5 A5
-				];
-			qcom,mdss-dsi-panel-Adobe-rgb-off-command = [
-				39 01 00 00 00 00 03 F0 5A 5A
-				39 01 00 00 00 00 02 C3 01
-				39 01 00 00 00 00 02 B0 18
-				39 01 00 00 00 00 02 C3 00
-				39 01 00 00 00 00 03 F0 A5 A5
-				];
-	
-			qcom,mdss-dsi-Adobe-rgb-command-state = "dsi_hs_mode";
-	
-	/*****************************************************************************/ 
-			qcom,mdss-dsi-panel-dci-p3-on-command = [
-				39 01 00 00 00 00 03 F0 5A 5A
-				39 01 00 00 00 00 02 C3 81
-				39 01 00 00 00 00 02 B0 18
-				39 01 00 00 00 00 02 C3 21
-				39 01 00 00 00 00 03 F0 A5 A5
-				];
-			qcom,mdss-dsi-panel-dci-p3-off-command = [
-				39 01 00 00 00 00 03 F0 5A 5A
-				39 01 00 00 00 00 02 C3 01
-				39 01 00 00 00 00 02 B0 18
-				39 01 00 00 00 00 02 C3 00
-				39 01 00 00 00 00 03 F0 A5 A5
-				];
-				
-			qcom,mdss-dsi-dci-p3-command-state = "dsi_hs_mode";
-	/*****************************************************************************/  
-
 			qcom,ulps-enabled;
 			qcom,suspend-ulps-enabled;
 			qcom,panel-allow-phy-poweroff;
