cpufreq: add Smartmax EPS gov by maxwen and fix compiling
F

--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -164,6 +164,12 @@ config CPU_FREQ_DEFAULT_GOV_ELECTRON
 	  loading your cpufreq low-level hardware driver, using the
 	  'electron' governor for latency-sensitive workloads.
 
+config CPU_FREQ_DEFAULT_GOV_SMARTMAX_EPS 
+        bool "smartmax_eps" 
+        select CPU_FREQ_GOV_SMARTMAX_EPS 
+        help 
+          Use the CPUFreq governor 'smartmax eps' as default 
+
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -299,6 +305,12 @@ config CPU_FREQ_GOV_ELECTRON
 	help
 	  'electron' - another tuned interactive with extra options
 
+config CPU_FREQ_GOV_SMARTMAX_EPS 
+    tristate "'smartmax EPS' cpufreq policy governor" 
+    select CPU_FREQ_TABLE 
+    help 
+      'smartmax EPS' is the extreme powersaving version of smartmax 
+ 
 config CPUFREQ_DT
 	tristate "Generic DT based cpufreq driver"
 	depends on HAVE_CLK && OF
